--- a/quizz-app/style.css
+++ b/quizz-app/style.css
@@ -45,22 +45,31 @@ body{
     padding: 10px;
     text-align: left;
     cursor: pointer;
-    transition: all 0.5s;
+    transition: all 0.1s;
 }
-.btn:hover{
+.btn:hover:not([disabled]){
     background-color: black;
     color: white;
+}
+.btn:disabled{
+    cursor: no-drop;
 }
 .next{
     font-size: 20px;
     padding: 10px 30px;
     margin: 10px auto;
     display: none   ;
-    background-color: green;
+    background-color: rgb(31, 59, 184);
     color: white;
     border: none;
     border-radius: 4px;
 }
 .next:active{
     scale: 0.93;
+}
+.correct{
+    background: rgb(94, 197, 94);
+}
+.incorrect{
+    background: rgba(207, 79, 79, 0.662);
 }
